[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Game over BG.png" type="Texture" id=2]
[ext_resource path="res://assets/Harder button.png" type="Texture" id=3]
[ext_resource path="res://assets/RankedPlay pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/Harder button pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/Normal pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/Normal button.png" type="Texture" id=7]
[ext_resource path="res://assets/RankedPlay button.png" type="Texture" id=8]
[ext_resource path="res://PickGame.gd" type="Script" id=9]
[ext_resource path="res://assets/Sounds/ButtonClick.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="TextureRect" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 260.0
margin_right = -90.0
margin_bottom = -260.0
texture = ExtResource( 2 )
stretch_mode = 4
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Pick a game:"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 300.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Normal:"
align = 1
valign = 1

[node name="Normal" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 196.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Harder" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 200.0
margin_right = 300.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 300.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 148.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "Ranked:"
align = 1
valign = 1

[node name="Ranked" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Harder" to="." method="_on_Harder_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Ranked" to="." method="_on_Ranked_pressed"]
